--- a/css/index.css
+++ b/css/index.css
@@ -5,14 +5,19 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
         "Helvetica Neue", sans-serif;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     border: 0;
 }
+
 table, th, td {
     border-width: 1px;
     border-style: solid;
     border-color: black;
+}
+
+table {
+    border-width: 2px;
 }
 
 .filterTable {
@@ -54,4 +59,20 @@ table, th, td {
 
 .hiding {
     display: none;
+}
+
+.triple {
+    margin: 1px;
+    border: 1px;
+    height: 170px;
+    border-style: solid;
+    vertical-align: top;
+}
+
+.foodList {
+    margin: 2.5%;
+}
+
+.resName {
+    font-size: 23px;
 }
